# servio

./: .env  .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-modal.html
app/: .coverage  constants.py  pytest.ini  registry_utils.py  reproduce_gigs_query.py  todo.txt
app/accounts/: exceptions.py  forms.py  schemas.py  signals.py  urls.py  validators.py
app/business_accounts/: apps.py
app/business_services/: apps.py
app/collaboration/: exceptions.py  urls.py
app/constants/: biz_categories.py
app/contracts/: __init__.py  urls.py  views.py
app/core/: context_processors.py  model_registry.py  url_names.py  urls.py  wsgi.py
app/middlewares/: pre_launch.py  provider_only.py
app/notifications/: urls.py  views.py
app/payments/: mixins.py  tasks.py  urls.py
app/proposals/: apps.py  urls.py
app/services/: __init__.py  email_service.py
app/smart_release/: apps.py  urls.py
app/template_map/: __init__.py  accounts.py  collaboration.py  contracts.py  emails.py  errors.py  payments.py  proposals.py  reviews.py  smart_release.py
app/templates/: index.html  index_bkp.html  lp.html  waiting-list.html
docs/: NAVIGATION.MD  create_local_ssl_cert  htacces_demo
scripts/python/: setup_payments_structure.py
scripts/shell/: count_codebase.sh
servio-app/: db.sqlite3  loggers.py  manage.py  package.json
servio-app/accounts/: adapters.py  forms.py  mixins.py  signals.py  urls.py
servio-app/business_accounts/: urls.py  views.py
ssl/: localhost+1-key.pem  localhost.pem
static/css/: output.css
(+663 files in other folders)
