[project]
name = "servio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-allauth[socialaccount]>=65.12.1",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
]
